# coding_challenges

./: .gitignore  README.md  go.mod
advent_of_code_2019/1/: main.go
advent_of_code_2019/2/: main.go
advent_of_code_2019/3/: main.go
advent_of_code_2019/4/: main.go  main_test.go
advent_of_code_2019/5/: main.go  main_test.go
advent_of_code_2019/6/: main.go
advent_of_code_2019/8/: main.go
advent_of_code_2019/intcode/: amps_test.go  day7.go  day9.go  helper.go  helper_test.go  intcode.go  main.go  main_test.go
advent_of_code_2019/tmp/: main.go
advent_of_code_2020/: README.md  generate_readme.py
advent_of_code_2021/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  22.py  23.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  Digraph.gv  README.md  template.py  utils.py
advent_of_code_2022/: 1.py  11.py  12.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  README.md  requirements.txt  utils.py
advent_of_code_2023/: README.md
advent_of_code_2023/day12/: Cargo.toml
advent_of_code_2023/day2/: Cargo.toml
advent_of_code_2023/day4/: Cargo.toml
advent_of_code_2023/day5/: Cargo.toml
advent_of_code_2023/day7/: Cargo.toml
advent_of_code_2024/: README.md
advent_of_code_2024/day3/: day3.cabal
advent_of_code_2024/day3/app/: Main.hs
advent_of_code_2024/day4/: day4.cabal
advent_of_code_2024/day4/app/: Main.hs
advent_of_code_2024/day8/: day8.cabal
advent_of_code_2024/day8/app/: Main.hs
advent_of_code_2025/: 1.py  10.py  11.py  12.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  README.md  template.py
leetcode/: 115_distinct_subsequences.py  1239_maximum_length_of_a_concatenated_string_with_unique_characters.py  15_three_sum.py  1_two_sum.py  217_contains_duplicate.py  53_maximum_subarray.py
project_euler/: 10_summation_of_primes.py  11_largest_product_in_a_grid.py  12_highly_divisible_triangle_number.py  13_large_sum.py  14_longest_collatz_sequence.py  15_lattice_paths.py  16_power_digit_sum.py  51_prime_digit_replacements.py  README.md
(+62 files in other folders)
