cabal-version:      3.0
name:               day4
version:            0.1.0.0

common warnings
    ghc-options: -Wall

executable day4
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   app
    default-language: Haskell2010
