cabal-version:      3.0
name:               day8
version:            0.1.0.0

common warnings
    ghc-options: -Wall

executable day5
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0,
                      containers ^>=0.6.7,
    hs-source-dirs:   app
    default-language: Haskell2010
